move mc-options 5dvw left to prevent overlapping

--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -51,7 +51,7 @@ body {
     }
 
     &#mc-options {
-        left: 50dvw;
+        left: 45dvw;
         top: 1dvh;
     }
 
